force-app/main/default/objects/Product2/fields/AF_BusinessUnit__c.field-meta.xml
<CustomField>
    <fullName>AF_BusinessUnit__c</fullName>
    <description>Flow-maintained, derived from Brand (pattern per AF_FL_Sub_DeriveBusinessUnit). Not user-editable — set FLS to Read-Only for all profiles.</description>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alfardan Automobiles</fullName>
            </value>
            <value>
                <fullName>Alfardan Premier Motors</fullName>
            </value>
            <value>
                <fullName>Alfardan Sports Motors</fullName>
            </value>
            <value>
                <fullName>UNMAPPED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>