force-app/main/default/objects/Product2/fields/AF_DefaultProviderSource__c.field-meta.xml
<CustomField>
    <fullName>AF_DefaultProviderSource__c</fullName>
    <label>Default Provider Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OEM</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Alfardan Internal</fullName>
            </value>
            <value>
                <fullName>Other Provider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>