force-app/main/default/objects/Product2/fields/AF_KeyloopProductReference__c.field-meta.xml
<CustomField>
    <fullName>AF_KeyloopProductReference__c</fullName>
    <externalId>true</externalId>
    <label>Keyloop Product / Item Reference</label>
    <length>50</length>
    <type>Text</type>
</CustomField>