force-app/main/default/objects/Product2/fields/AF_ProductCategory__c.field-meta.xml
<CustomField>
    <fullName>AF_ProductCategory__c</fullName>
    <label>Product Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Model</fullName>
            </value>
            <value>
                <fullName>Accessory</fullName>
            </value>
            <value>
                <fullName>Package</fullName>
            </value>
            <value>
                <fullName>Paint Job</fullName>
            </value>
            <value>
                <fullName>Tint</fullName>
            </value>
            <value>
                <fullName>Service Item</fullName>
            </value>
            <value>
                <fullName>Internal Provider Item</fullName>
            </value>
            <value>
                <fullName>Trade-In Deduction</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>