force-app/main/default/objects/Product2/fields/AF_ThumbnailLink__c.field-meta.xml
<CustomField>
    <fullName>AF_ThumbnailLink__c</fullName>
    <description>Auto-populated by AF_VehicleImagesHandler from the first Photo uploaded to this Product&apos;s (Vehicle Model&apos;s) Files related list. Used by the Vehicle Finder&apos;s model card image, same-origin so it needs no CSP trusted site.</description>
    <label>Thumbnail Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>