force-app/main/default/objects/Product2/fields/Product_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Product_Purpose__c</fullName>
    <label>Product Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sell</fullName>
            </value>
            <value>
                <fullName>Plan</fullName>
            </value>
            <value>
                <fullName>Purchase</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>