force-app/main/default/objects/Product2/fields/Vehicle_Definition__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Definition</label>
    <referenceTo>VehicleDefinition</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>