force-app/main/default/objects/Product2/recordTypes/Product_Type_RLM.recordType-meta.xml
<RecordType>
    <fullName>Product_Type_RLM</fullName>
    <active>true</active>
    <description>Product Type RLM</description>
    <label>Product Type RLM</label>
</RecordType>