force-app/main/default/objects/Product2/listViews/All_Products.listView-meta.xml
<ListView>
    <fullName>All_Products</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <columns>PRODUCT2.AVAILABILITY_DATE</columns>
    <columns>PRODUCT2.ACTIVE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AF_ProductCategory__c</field>
        <operation>equals</operation>
        <value>Vehicle Model</value>
    </filters>
    <label>All Products</label>
</ListView>