force-app/main/default/objects/Product2/listViews/Bundled_Products_List_View.listView-meta.xml
<ListView>
    <fullName>Bundled_Products_List_View</fullName>
    <columns>PRODUCT2.NAME</columns>
    <columns>PRODUCT2.DESCRIPTION</columns>
    <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
    <columns>PRODUCT2.PRODUCT_CLASS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.NAME</field>
        <operation>notEqual</operation>
        <value>Neo Ionic EV CD4 2022 ZXi</value>
    </filters>
    <label>Bundled Products</label>
</ListView>